--- a/index.html
+++ b/index.html
@@ -7,41 +7,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>KhSamuel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8c1b5f5b5f.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>KhSamuel</h1>
-            <h2>Software Developer</h2>
-        </div>
-        <div class="content">
-            <div class="left">
-                <h3>Skills</h3>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>PHP</li>
-                    <li>MySQL</li>
-                    <li>Python</li>
-                    <li>Java</li>
-                    <li>Git</li>
-                    <li>Linux</li>
-                </ul>
+    <div class="content-container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="left-side">
+                    <div class="left-side-content">
+                        <h1>KhSamuel</h1>
+                        <p>Web Developer</p>
+                        <div class="social-links">
+                            <a href="https://www.facebook.com/kh.samuel.7"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/kh.samuel/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/kh-samuel-7b4b5b1a0/"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="right">
-                <h3>Projects</h3>
-                <ul>
-                    <li><a href="">Project 1</a></li>
-                    <li><a href="">Project 2</a></li>
-                </ul>
+            <div class="col-md-6">
+                <div class="right-side-content">
+                    <h1>KhSamuel</h1>
+                    <p>Web Developer</p>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/kh.samuel.7"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/kh.samuel/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/kh-samuel-7b4b5b1a0/"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="footer">
-            <h3>Contact</h3>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/kh-samuel-0b0b5a1a0/">LinkedIn</a></li>
-            </ul>
         </div>
     </div>
 </body>
