--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="row text-center header">
+        <div class="col-sm-3 header-left header-yellow font-bold">
+            <h1 onclick="unsubscribe(); stop_button_click();location.href='../../../index.html';" class="transition">Home</h1>
+        </div>
+        <div class="col-sm-9 header-violet font-bold">
+            <h1>Carry My Luggage</h1>
+        </div>
+    </div>
     <div class="content-container">
         <div class="row">
             <div class="col-md-6">
